<resources>
    <string name="app_name">Playlist Maker</string>

    <!-- Экран: Главное меню -->
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>

    <!-- Экран: Медиатеки -->
    <string name="media_is_empty">Ваша медиатека пуста</string>
    <string name="no_one_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="name_of_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <!-- Экран: Настройки -->
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>

    <!-- Экран: Поиск -->
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <!-- Экран: Аудиоплеер -->
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <!-- Экран: Плейлист -->
    <string name="share">Поделиться</string>
    <string name="editInformation">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="traksNotAdd">Треки еще не добавлены</string>

    <!-- Поделиться приложением (сообщения)-->
    <string name="email">student_email@domain.com</string>
    <string name="emailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailBody">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <!-- Ссылки-->
    <string name="linkOnCourse">https://practicum.yandex.ru/</string>
    <string name="linkOfTerms">https://yandex.ru/legal/practicum_offer/</string>
    <string name="iTunesBaseUrl">https://itunes.apple.com/</string>

    <!-- Ошибки-->
    <string name="error">Ошибка</string>
    <string name="serverError">Ошибка работы сервера</string>
    <string name="noReply">Нет Ответа</string>
    <string name="nothingWasFound">Ничего не нашлось</string>
    <string name="communicationProblems">Проблемы со связью</string>
    <string name="uploadFailed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="error_creating_playlist">Ошибка создания плейлиста</string>

    <!-- Сообщения-->
    <string name="already_added">Трек уже добавлен в плейлист</string>
    <string name="track_added_to_playlist">Трек успешно добавлен в плейлист</string>
    <string name="playlist_updated">Плейлист успешно обновлен</string>
    <string name="error_playlist_updated">Ошибка при обновлении плейлиста</string>
    <string name="error_adding_track">Ошибка добавления трека</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="no_track_selected">Не выбран трек</string>

    <!-- Диалоговые окна-->
    <string name="data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="attention">Внимание</string>
    <string name="nothing_to_share">Отсутствуют треки для отправки</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>

</resources>