<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainActivityLinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            android:textColor="@color/yp_white"
            android:textSize="@dimen/middle_text_size"
            android:fontFamily="@font/ys_display_medium"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            style="@style/ButtonStyleInMenu"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/button_media"
            style="@style/ButtonStyleInMenu"
            android:text="@string/media_library"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/button_settings"
            style="@style/ButtonStyleInMenu"
            android:text="@string/settings"
            app:icon="@drawable/settings"/>

    </LinearLayout>
</LinearLayout>