<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityLinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageButton
            android:id="@+id/ic_arrow_back"
            style="@style/ButtonStyleBack"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAccessibility="no" />

        <TextView
            style="@style/TextStyleOfNavigationInHeader"
            android:text="@string/settings"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/primary_height_settings"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            style="@style/TextStyleOfMenuItems"
            android:text="@string/dark_theme" />

        <Switch
            style="@style/SwitchStyle"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/primary_height_settings"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            style="@style/TextStyleOfMenuItems"
            android:text="@string/share_app" />

        <ImageButton
            android:id="@+id/share"
            style="@style/IconsStyle"
            android:importantForAccessibility="no"
            android:src="@drawable/share"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/primary_height_settings"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            style="@style/TextStyleOfMenuItems"
            android:text="@string/write_support" />

        <ImageButton
            android:id="@+id/group"
            style="@style/IconsStyle"
            android:importantForAccessibility="no"
            android:src="@drawable/group"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/primary_height_settings"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            style="@style/TextStyleOfMenuItems"
            android:text="@string/terms_of_use" />

        <ImageButton
            android:id="@+id/arrow"
            style="@style/IconsStyle"
            android:importantForAccessibility="no"
            android:src="@drawable/arrow"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
    </LinearLayout>
</LinearLayout>