<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/panel_header_padding"
            android:text="@string/app_name"
            android:textColor="@color/yp_white"
            android:textSize="@dimen/text_size_app_name" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/search"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/text_size_app_name"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/yp_black"
            />

        <Button
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/media_library"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/text_size_app_name"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/yp_black"
            />

        <Button
            android:layout_width="@dimen/main_menu_button_width"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button"
            android:text="@string/settings"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/text_size_app_name"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/yp_black"
            />

    </LinearLayout>
</LinearLayout>