<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_white"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageButton
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:src="@drawable/ic_light_mode"
            android:backgroundTint="@color/yp_white"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/material_motion_duration_long_2"
            android:layout_gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="86dp"
            android:paddingTop="8dp"
            android:text="@string/settings"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/text_size_app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/dark_theme"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/primary_components_text_size" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:gravity="end"
            android:checked="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/share_app"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/primary_components_text_size" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/share"
            android:backgroundTint="@color/yp_white"
            android:importantForAccessibility="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/write_support"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/primary_components_text_size" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/group"
            android:backgroundTint="@color/yp_white"
            android:importantForAccessibility="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/terms_of_use"
            android:textColor="@color/yp_black"
            android:textSize="@dimen/primary_components_text_size" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow"
            android:backgroundTint="@color/yp_white"
            android:importantForAccessibility="no" />
    </LinearLayout>
</LinearLayout>